log/build_2023-09-06_18-16-17/robo_core/stderr.log
  File "/home/entity014/roboInno_ws/install/robo_core/lib/python3.8/site-packages/robo_core/node_goto-point.py", line 2
    import rclpy.node import Node
                      ^
SyntaxError: invalid syntax

